[package]
build = "build.rs"
name = "hiallib"
version = "0.1.0"
authors = ["Emanuel Dima <emanueldima@gmail.com>"]
edition = "2021"
publish = false
description = "Hial library"
license = "LGPL-2.1-only"
readme = "README.md"
repository = "https://github.com/emanueldima/hial"

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
dirs = "6.0"
indexmap = "2"
linkme = "0.3"
nom = "7"
paste = "1.0"
rand = "0.10"
regex = "1"
reqwest = { version = "0.13", features = ["blocking", "json"] }
serde = { version = "1" }
tree-sitter = "0.26"
url = "2.5"
quick-xml = { version = "0.39", features = ["encoding"] }
yaml-rust = "0.4"
mongodb = "3"
pollster = "0.4"
futures-util = "0.3"

[dependencies.serde_json]
version = "1"
features = ["preserve_order"]

[dependencies.toml]
version = "0.9"
features = ["preserve_order"]

[build-dependencies]
cc = "1.0"
cbindgen = "0.29"
