[package]
build = "build.rs"
name = "hiallib"
version = "0.1.0"
authors = ["Emanuel Dima <emanueldima@gmail.com>"]
edition = "2024"
publish = false
description = "Hial library"
license = "LGPL-2.1-only"
readme = "README.md"
repository = "https://github.com/emanueldima/hial"

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
chumsky = "0.12"
dirs = "6.0"
indexmap = "2"
linkme = "0.3"
paste = "1.0"
rand = "0.10"
regex = "1"
reqwest = { version = "0.13", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
tree-sitter = "0.26"
url = "2.5"
quick-xml = { version = "0.39", features = ["encoding"] }
yaml-rust = "0.4"
# pollster = "0.4"
futures = "0.3"
ariadne = "0.6.0"
tiny_http = "0.12.0"

[dependencies.mongodb]
version = "3"
features = ["sync"]

[dependencies.serde_json]
version = "1"
features = ["preserve_order"]

[dependencies.toml]
version = "0.9"
features = ["preserve_order"]

[build-dependencies]
cc = "1.2"
cbindgen = "0.29"
